# friendly-filer

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: architecture.md  fps-spec.md
src/: config.rs  disc.rs  enemy.rs  hud.rs  input.rs  lib.rs  main.rs  menu.rs  palette.rs  physics.rs  player.rs  portal.rs  render.rs  scene.rs
