[package]
name = "friendly-filer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["kako-jun"]
license = "MIT"
description = "TUI 3D first-person file manager powered by termray"
homepage = "https://github.com/kako-jun/friendly-filer"
repository = "https://github.com/kako-jun/friendly-filer"
readme = "README.md"
keywords = ["file-manager", "tui", "raycasting", "terminal", "3d"]
categories = ["command-line-utilities", "filesystem"]
exclude = [".github/", "target/"]

[dependencies]
termray = "0.3"
crossterm = "0.29"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
